--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,10 @@
 /* This file is for your main application css. */
-@import "./phoenix.css";
 @import "../node_modules/nprogress/nprogress.css";
+
+/* tailwindcss directives */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* LiveView specific classes for your customizations */
 .invalid-feedback {
