Create brand struct and tobaccos module

--- a/lib/tobaccos_club_web/live/page_live.html.leex
+++ b/lib/tobaccos_club_web/live/page_live.html.leex
@@ -32,7 +32,7 @@
       <tbody>
         <%= for brand <- @brands do %>
           <tr>
-            <td class="border px-4 py-2"><%= brand["name"] %>
+            <td class="border px-4 py-2"><%= brand.name %>
           </tr>
         <% end %>
       </tbody>
