--- a/lib/tobaccos_club_web/templates/layout/root.html.leex
+++ b/lib/tobaccos_club_web/templates/layout/root.html.leex
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <%= csrf_meta_tag() %>
-    <%= live_title_tag assigns[:page_title] || "tobaccos.club" %>
+    <%= live_title_tag assigns[:page_title] || "Tobacco's club" %>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
@@ -14,16 +14,16 @@
       <div class="flex items-center flex-shrink-0 text-orange-900 mr-6">
         <img
           class="fill-current h-8 w-8 mr-2"
-          src="<%= Routes.static_path(@conn, "/images/pipe.png") %>" alt="Tobacco Reviews Logo"/>
-        <span class="font-semibold text-xl tracking-tight">Tobaccos Club</span>
+          src="<%= Routes.static_path(@conn, "/images/pipe.png") %>" alt="Tobacco's club Logo"/>
+        <span class="font-semibold text-xl tracking-tight">Tobacco's Club</span>
       </div>
       <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
         <div class="text-sm lg:flex-grow">
-          <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-orange-900 hover:text-white mr-4">
-            Brands
+          <a href="/" class="block mt-4 lg:inline-block lg:mt-0 text-orange-900 hover:text-white mr-4">
+            <%= gettext "Brands" %>
           </a>
-          <a href="#responsive-header" class="block mt-4 lg:inline-block lg:mt-0 text-orange-900 hover:text-white mr-4">
-            Blends
+          <a href="/blends" class="block mt-4 lg:inline-block lg:mt-0 text-orange-900 hover:text-white mr-4">
+            <%= gettext "Blends" %>
           </a>
         </div>
       </div>
