--- a/lib/tobaccos_club_web/live/page_live.html.leex
+++ b/lib/tobaccos_club_web/live/page_live.html.leex
@@ -9,9 +9,7 @@
           name="brand"
           placeholder="<%= gettext "Search" %>"
           aria-label="Brand name">
-        <button class="flex-shrink-0 bg-orange-500 hover:bg-orange-700 border-orange-500 hover:border-orange-700 text-sm border-4 text-white py-1 px-2 rounded"type="button">
-          <%= gettext "Search" %>
-        </button>
+        <input type="submit" class="flex-shrink-0 bg-orange-500 hover:bg-orange-700 border-orange-500 hover:border-orange-700 text-sm border-4 text-white py-1 px-2 rounded" value="<%= gettext "Search" %>">
       </div>
     </form>
   </div>
