--- a/lib/tobaccos_club_web/live/brand_live.html.leex
+++ b/lib/tobaccos_club_web/live/brand_live.html.leex
@@ -1,4 +1,17 @@
 <section>
   <h1 class="text-orange-900 text-4xl font-bold text-center m-4"><%= @brand.name %></h1>
   <h5 class="text-orange-400 text-4xl font-bold text-center m-4"><%= gettext "Blends" %></h5>
+  <div>
+    <table class="w-full text-left table-collapse">
+      <tbody>
+        <%= for blend <- @brand.blends do %>
+          <tr>
+            <td class="border px-4 py-2">
+              <a href="/blends/<%= blend.id %>"><%= blend.name %></a>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </section>
