Add link to show all brands

--- a/lib/tobaccos_club_web/live/page_live.html.leex
+++ b/lib/tobaccos_club_web/live/page_live.html.leex
@@ -23,6 +23,12 @@
              phx-value-letter="<%= a %>"><%= a %></a>
         </li>
       <% end %>
+      <li>
+        <a class="text-orange-900 hover:text-green-800"
+           href="#"
+           phx-click="filter"
+           phx-value-letter="all"><%= gettext("All") %></a>
+      </li>
     </ul>
   </div>
   <div>
