--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -1,5 +1,7 @@
-<section>
-  <h1 class="text-orange-900 text-4xl font-bold text-center m-4"><%= gettext "Brands" %></h1>
+<section class="flex flex-col items-center">
+  <div class="flex items-center justify-center">
+    <h1 class="text-orange-900 text-4xl font-bold text-center m-4"><%= gettext "Blends" %></h1>
+  </div>
   <div class="flex justify-center">
     <form class="w-full max-w-sm" phx-submit="search">
       <div class="flex items-center border-b border-orange-500 py-2">
@@ -12,7 +14,7 @@
       </div>
     </form>
   </div>
-  <div>
+  <div class="hidden md:block">
     <ul class="flex justify-center m-6">
       <%= for a <- @alphabet do %>
         <li class="mr-6 text-lg">
@@ -33,17 +35,20 @@
   <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
     <table class="min-w-full leading-normal">
       <tbody>
-        <%= for brand <- @brands do %>
+        <%= for blend <- @blends do %>
           <tr class="hover:bg-orange-100">
             <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-lg">
-              <a href="<%= brand.slug %>"><%= brand.name %></a>
+              <%= link(blend.name, to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Show, blend.brand_id, blend.id)) %>
+            </td>
+            <td class="hidden py-4 px-6 border-b border-gray-200 text-orange-700 text-lg text-right">
+              <span><%= link "Edit", to: "#" %></span>
             </td>
           </tr>
         <% end %>
       </tbody>
     </table>
   </div>
-  <div class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
+  <div class="bg-white w-full py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
     <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
       <div>
         <p class="text-sm leading-5 text-gray-700">
@@ -58,12 +63,12 @@
       </div>
       <div>
         <nav class="relative z-0 inline-flex shadow-sm">
-          <%= live_patch to: Routes.live_path(@socket, PageLive, page: @page_number - 1), class: "relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" do %>
+          <%= live_patch to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Index, page: @page_number - 1), class: "relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" do %>
             <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
             </svg>
           <% end %>
-          <%= live_patch to: Routes.live_path(@socket, PageLive, page: @page_number + 1), class: "relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" do %>
+          <%= live_patch to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Index, page: @page_number + 1), class: "relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" do %>
             <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
             </svg>
