--- a/lib/tobaccos_club_web/templates/layout/root.html.leex
+++ b/lib/tobaccos_club_web/templates/layout/root.html.leex
@@ -7,22 +7,25 @@
     <%= csrf_meta_tag() %>
     <%= live_title_tag assigns[:page_title] || "Tobacco's club" %>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
-  <body>
-    <nav class="flex items-center justify-between flex-wrap bg-orange-300 p-6">
-      <div class="flex items-center flex-shrink-0 text-orange-900">
-        <img
-          class="fill-current h-8 w-8 mr-2"
-          src="<%= Routes.static_path(@conn, "/images/pipe.png") %>" alt="Tobacco's club Logo"/>
-        <span class="font-semibold text-xl tracking-tight">
-          <a href="/" class="blocklg:inline-block lg:mt-0 text-orange-900 hover:text-orange-700 mr-4">
-            Tobacco's Club
-          </a>
-        </span>
-      </div>
-    </nav>
-    <div class="container mx-auto">
+  <body class="grid grid-cols-5 h-screen">
+    <div class="col-span-1 bg-orange-300">
+      <nav class="flex items-center justify-center p-6">
+        <div class="flex items-center text-orange-900">
+          <img
+            class="fill-current h-8 w-8 mr-2"
+            src="<%= Routes.static_path(@conn, "/images/pipe.png") %>" alt="Tobacco's club Logo"/>
+          <span class="font-semibold text-xl tracking-tight">
+            <a href="/" class="blocklg:inline-block lg:mt-0 text-orange-900 hover:text-orange-700 mr-4">
+              Tobacco's Club
+            </a>
+          </span>
+        </div>
+      </nav>
+    </div>
+    <div class="col-span-4 h-screen™">
       <%= @inner_content %>
     </div>
   </body>
