--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -1,80 +1,85 @@
-<section class="flex flex-col items-center">
-  <div class="flex items-center justify-center">
-    <h1 class="text-orange-900 text-4xl font-bold text-center m-4"><%= gettext "Blends" %></h1>
-  </div>
-  <div class="flex justify-center">
-    <form class="w-full max-w-sm" phx-submit="search">
-      <div class="flex items-center border-b border-orange-500 py-2">
-        <input
-          class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
-          type="text"
-          name="brand"
-          placeholder="<%= gettext "Search" %>"
-          aria-label="Brand name">
-      </div>
-    </form>
-  </div>
-  <div class="hidden md:block">
-    <ul class="flex justify-center m-6">
-      <%= for a <- @alphabet do %>
-        <li class="mr-6 text-lg">
-          <a class="text-orange-900 hover:text-orange-500"
-             href="#"
-             phx-click="filter"
-             phx-value-letter="<%= a %>"><%= a %></a>
-        </li>
-      <% end %>
-      <li>
-        <a class="text-orange-900 hover:text-orange-500"
-           href="#"
-           phx-click="filter"
-           phx-value-letter="all"><%= gettext("All") %></a>
-      </li>
-    </ul>
-  </div>
-  <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
-    <table class="min-w-full leading-normal">
-      <tbody>
-        <%= for blend <- @blends do %>
-          <tr class="hover:bg-orange-100">
-            <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-lg">
-              <%= link(blend.name, to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Show, blend.brand_id, blend.id)) %>
-            </td>
-            <td class="hidden py-4 px-6 border-b border-gray-200 text-orange-700 text-lg text-right">
-              <span><%= link "Edit", to: "#" %></span>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-  <div class="bg-white w-full py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
-    <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
-      <div>
-        <p class="text-sm leading-5 text-gray-700">
-          <%= gettext "Showing" %>
-          <span class="font-medium"><%= @page_number * @page_size - @page_size + 1 %></span>
-          <%= gettext "to" %>
-          <span class="font-medium"><%= @page_number * @page_size %></span>
-          <%= gettext "of" %>
-          <span class="font-medium"><%= @total_entries %></span>
-          <%= gettext "results" %>
-        </p>
-      </div>
-      <div>
-        <nav class="relative z-0 inline-flex shadow-sm">
-          <%= live_patch to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Index, page: @page_number - 1), class: "relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" do %>
-            <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
-            </svg>
-          <% end %>
-          <%= live_patch to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Index, page: @page_number + 1), class: "relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" do %>
-            <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-              <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-            </svg>
-          <% end %>
-        </nav>
+<div class="grid grid-cols-6 gap-4">
+  <div class="col-span-2">
+    <div class="border border-orange-900 m-5 w-64 fixed">
+      <h5 class="text-orange-900 text-2xl font-bold text-center m-4">Filter</h5>
+      <div class="flex justify-center">
+        <form class="w-full max-w-sm" phx-submit="search" phx-change="filter">
+          <div class="flex items-center border-b border-orange-500 py-2">
+            <input
+              class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
+              type="text"
+              name="brand"
+              value="<%= @filter.search_text %>"
+              placeholder="<%= gettext "Search" %>"
+              aria-label="Brand name">
+          </div>
+
+          <div class="flex flex-col border-b border-orange-500 py-2">
+            <input type="hidden" name="blend_type_ids[]" value="0"/>
+            <%= for blend_type <- @blend_types do %>
+              <label class="inline-flex mt-3 pl-12 hover:text-orange-600">
+                <input
+                  class="form-checkbox h-5 w-5 text-gray-600"
+                  type="checkbox"
+                  name="blend_type_ids[]"
+                  value="<%= blend_type.id %>"
+                  <%= if to_string(blend_type.id) in @filter.blend_type_ids, do: "checked" %>>
+                <span class="ml-2 text-gray-700"><%= blend_type.name %></span>
+              </label>
+            <% end %>
+          </div>
+        </form>
       </div>
     </div>
   </div>
-</section>
+  <div class="col-span-4">
+    <div class="flex items-center justify-center">
+      <h1 class="text-orange-900 text-4xl font-bold text-center m-4"><%= gettext "Blends" %></h1>
+    </div>
+    <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
+      <table class="min-w-full leading-normal">
+        <tbody>
+          <%= for blend <- @blends do %>
+            <tr class="hover:bg-orange-100">
+              <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-lg">
+                <%= link(blend.name, to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Show, blend.brand_id, blend.id)) %>
+              </td>
+              <td class="hidden py-4 px-6 border-b border-gray-200 text-orange-700 text-lg text-right">
+                <span><%= link "Edit", to: "#" %></span>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="bg-white w-full py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
+      <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
+        <div>
+          <p class="text-sm leading-5 text-gray-700">
+            <%= gettext "Showing" %>
+            <span class="font-medium"><%= @page_number * @page_size - @page_size + 1 %></span>
+            <%= gettext "to" %>
+            <span class="font-medium"><%= @page_number * @page_size %></span>
+            <%= gettext "of" %>
+            <span class="font-medium"><%= @total_entries %></span>
+            <%= gettext "results" %>
+          </p>
+        </div>
+        <div>
+          <nav class="relative z-0 inline-flex shadow-sm">
+            <%= live_patch to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Index, page: @page_number - 1), class: "relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" do %>
+              <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
+              </svg>
+            <% end %>
+            <%= live_patch to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Index, page: @page_number + 1), class: "relative inline-flex items-center px-2 py-2 rounded-r-md border border-gray-300 bg-white text-sm leading-5 font-medium text-gray-500 hover:text-gray-400 focus:z-10 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-100 active:text-gray-500 transition ease-in-out duration-150" do %>
+              <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
+              </svg>
+            <% end %>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
