Add sidebar with filter

--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -1,4 +1,83 @@
-<div class="grid grid-cols-6 gap-4">
+<div class="md:flex flex-col md:flex-row md:min-h-screen w-full">
+  <div @click.away="open = false" class="flex flex-col w-full md:w-64 text-gray-700 bg-white dark-mode:text-gray-200 dark-mode:bg-gray-800 flex-shrink-0" x-data="{ open: false }">
+    <div class="flex-shrink-0 px-8 py-4 flex flex-row items-center justify-between">
+      <a href="#" class="text-lg font-semibold tracking-widest text-gray-900 uppercase rounded-lg dark-mode:text-white focus:outline-none focus:shadow-outline">Tobacco's Club</a>
+      <button class="rounded-lg md:hidden rounded-lg focus:outline-none focus:shadow-outline" @click="open = !open">
+        <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6">
+          <path x-show="!open" fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+          <path x-show="open" fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+        </svg>
+      </button>
+    </div>
+    <nav :class="{'block': open, 'hidden': !open}" class="flex-grow md:block px-4 pb-4 md:pb-0 md:overflow-y-auto">
+      <div class="flex items-center border-b border-orange-500 py-2">
+        <form class="w-full max-w-sm" phx-submit="search">
+          <input
+            class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
+            type="text"
+            name="brand"
+            value="<%= @filter.search_text %>"
+            placeholder="<%= gettext "Search" %>"
+            aria-label="Brand name">
+        </form>
+      </div>
+      <div @click.away="open = false" class="relative" x-data="{ open: false }">
+        <button @click="open = !open" class="flex flex-row items-center w-full px-4 py-2 mt-2 text-sm font-semibold text-left bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:focus:bg-gray-600 dark-mode:hover:bg-gray-600 md:block hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
+          <span><%= gettext("Blend Types") %></span>
+          <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}" class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+        </button>
+        <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="absolute right-0 w-full mt-2 origin-top-right rounded-md shadow-lg">
+          <div class="px-2 py-2 bg-white rounded-md shadow dark-mode:bg-gray-800">
+            <form class="w-full max-w-sm" phx-submit="search" phx-change="filter">
+              <input type="hidden" name="blend_type_ids[]" value="0"/>
+              <%= for blend_type <- @blend_types do %>
+                <label class="inline-flex mt-3 pl-12 hover:text-orange-600">
+                  <input
+                    class="form-checkbox h-5 w-5 text-gray-600"
+                    type="checkbox"
+                    name="blend_type_ids[]"
+                    value="<%= blend_type.id %>"
+                    <%= if to_string(blend_type.id) in @filter.blend_type_ids, do: "checked" %>>
+                  <span class="ml-2 text-gray-700"><%= blend_type.name %></span>
+                </label>
+              <% end %>
+            </form>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div>
+    <div class="flex items-center justify-center">
+      <h1 class="text-orange-900 text-4xl font-bold text-center m-4"><%= gettext "Blends" %></h1>
+    </div>
+    <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
+      <table class="min-w-full leading-normal">
+        <tbody>
+          <%= for blend <- @blends do %>
+            <tr class="hover:bg-orange-100">
+              <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-lg">
+                <%= link(blend.name, to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Show, blend.brand_id, blend.id)) %>
+              </td>
+              <td class="hidden py-4 px-6 border-b border-gray-200 text-orange-700 text-lg text-right">
+                <span><%= link "Edit", to: "#" %></span>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+<div class="grid grid-cols-6 gap-4" x-data="{open: false}">
   <div class="col-span-2">
     <div class="border border-orange-900 m-5 w-64 fixed">
       <h5 class="text-orange-900 text-2xl font-bold text-center m-4">Filter</h5>
@@ -14,19 +93,27 @@
               aria-label="Brand name">
           </div>
 
-          <div class="flex flex-col border-b border-orange-500 py-2">
-            <input type="hidden" name="blend_type_ids[]" value="0"/>
-            <%= for blend_type <- @blend_types do %>
-              <label class="inline-flex mt-3 pl-12 hover:text-orange-600">
-                <input
-                  class="form-checkbox h-5 w-5 text-gray-600"
-                  type="checkbox"
-                  name="blend_type_ids[]"
-                  value="<%= blend_type.id %>"
-                  <%= if to_string(blend_type.id) in @filter.blend_type_ids, do: "checked" %>>
-                <span class="ml-2 text-gray-700"><%= blend_type.name %></span>
-              </label>
-            <% end %>
+          <div @click.away="open = false" class="relative" x-data="{ open: false }">
+            <button @click="open = !open" class="flex flex-row items-center w-full px-4 py-2 mt-2 text-sm font-semibold text-left bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:focus:bg-gray-600 dark-mode:hover:bg-gray-600 md:block hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline">
+              <span><%= gettext("Blend Types") %></span>
+              <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}" class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+            </button>
+            <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="absolute right-0 w-full mt-2 origin-top-right rounded-md shadow-lg">
+              <div :class="{'block': open, 'hidden': !open}" class="flex flex-col border-b border-orange-500 py-2">
+                <input type="hidden" name="blend_type_ids[]" value="0"/>
+                <%= for blend_type <- @blend_types do %>
+                  <label class="inline-flex mt-3 pl-12 hover:text-orange-600">
+                    <input
+                      class="form-checkbox h-5 w-5 text-gray-600"
+                      type="checkbox"
+                      name="blend_type_ids[]"
+                      value="<%= blend_type.id %>"
+                      <%= if to_string(blend_type.id) in @filter.blend_type_ids, do: "checked" %>>
+                    <span class="ml-2 text-gray-700"><%= blend_type.name %></span>
+                  </label>
+                <% end %>
+              </div>
+            </div>
           </div>
         </form>
       </div>
