--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -65,7 +65,7 @@
     </table>
   </div>
   <div class="bg-white w-full py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
-    <div class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
+    <div class="flex-1 flex items-center justify-between">
       <div>
         <p class="text-sm leading-5 text-gray-700">
           <%= gettext "Showing" %>
