Change to use cut from database

--- a/lib/tobaccos_club_web/live/blends_live/show.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/show.html.leex
@@ -38,7 +38,7 @@
             <%= gettext("Cut") %>
           </dt>
           <dd class="mt-1 text-sm leading-5 text-orange-900 sm:mt-0 sm:col-span-2">
-            <%= @blend.cut %>
+            <%= @blend.cut.name %>
           </dd>
         </div>
 
