--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -23,55 +23,11 @@
       </div>
     </form>
 
-    <div @click.away="open = false" class="relative" x-data="{ open: false }">
-      <button @click="open = !open" class="flex flex-row items-center px-4 py-2 mt-2 text-sm font-semibold text-left bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:focus:bg-gray-600 dark-mode:hover:bg-orange-100 md:block hover:text-gray-900 focus:text-gray-900 hover:bg-orange-100 focus:bg-orange-100 focus:outline-none focus:shadow-outline">
-        <span><%= gettext("Blend Type") %></span>
-        <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}" class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-      </button>
-      <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="absolute right-0 mt-2 origin-top-right rounded-md shadow-lg">
-        <div class="px-2 py-2 bg-white rounded-md shadow dark-mode:bg-gray-800">
-          <form phx-change="filter">
-            <input type="hidden" name="blend_type_ids[]" value="0"/>
-            <%= for blend_type <- @blend_types do %>
-              <label class="inline-flex mt-3 hover:text-orange-600">
-                <input
-                  class="form-checkbox h-5 w-5 text-gray-600"
-                  type="checkbox"
-                  name="blend_type_ids[]"
-                  value="<%= blend_type.id %>"
-                  <%= if to_string(blend_type.id) in @filter.blend_type_ids, do: "checked" %>>
-                <span class="ml-2 text-gray-700"><%= blend_type.name %></span>
-              </label>
-            <% end %>
-          </form>
-        </div>
-      </div>
-    </div>
+    <%= render_filter_options(@socket, @blend_types, gettext("Blend Type"), "blend_type_ids", @filter) %>
 
-    <div @click.away="open = false" class="relative" x-data="{ open: false }">
-      <button @click="open = !open" class="flex flex-row items-center px-4 py-2 mt-2 text-sm font-semibold text-left bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:focus:bg-gray-600 dark-mode:hover:bg-orange-100 md:block hover:text-gray-900 focus:text-gray-900 hover:bg-orange-100 focus:bg-orange-100 focus:outline-none focus:shadow-outline">
-        <span><%= gettext("Country") %></span>
-        <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}" class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-      </button>
-      <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="absolute right-0 mt-2 origin-top-right rounded-md shadow-lg">
-        <div class="px-2 py-2 bg-white rounded-md shadow dark-mode:bg-gray-800">
-          <form phx-change="filter">
-            <input type="hidden" name="countries[]" value="all"/>
-            <%= for country <- @countries do %>
-              <label class="inline-flex mt-3 hover:text-orange-600">
-                <input
-                  class="form-checkbox h-5 w-5 text-gray-600"
-                  type="checkbox"
-                  name="countries[]"
-                  value="<%= country.locale %>"
-                  <%= if to_string(country.locale) in @filter.countries, do: "checked" %>>
-                <span class="ml-2 text-gray-700"><%= country.name %></span>
-              </label>
-            <% end %>
-          </form>
-        </div>
-      </div>
-    </div>
+    <%= render_filter_options(@socket, @countries, gettext("Country"), "countries", @filter, "locale") %>
+
+    <%= render_filter_options(@socket, @cuts, gettext("Cut"), "cut_ids", @filter) %>
   </div>
 
   <%= render_pagination_navigation(@socket, @pagination_info, TobaccosClubWeb.BlendsLive.Index) %>
