--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -3,14 +3,14 @@
 </div>
 <div class="mt-10 justify-center">
   <div class="flex flex-col items-center justify-center m-5">
-      <form class="max-w-sm" phx-submit="search">
-      <div class="pt-2 relative mx-auto text-gray-600">
-          <input class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none"
+      <form class="max-w-sm w-full" phx-submit="search">
+      <div class="pt-2 relative mx-auto text-gray-600 w-full">
+          <input class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none w-full"
             type="search"
             name="brand"
             aria-label="Brand name"
             value="<%= @filter.search_text %>"
-            placeholder="<%= gettext "Search" %>">
+            placeholder="<%= gettext "Search by Blend or Brand" %>">
           <button type="submit" class="absolute right-0 top-0 mt-5 mr-4">
             <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
